# pygpt

./: .buildinfo  .bumpver.toml  LICENSE  Makefile  README.md  api.html  commands.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  usage.html
.doctrees/: api.doctree  commands.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/api_doc/: discussion.doctree  gpt_api.doctree  message.doctree  user_interface.doctree
_modules/: index.html
_modules/pygpt/: discussion.html  gpt_api.html  message.html  user_interface.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/api_doc/: gpt_api.rst.txt  user_interface.rst.txt
api_doc/: discussion.html  gpt_api.html  message.html  user_interface.html
docs/source/: api.rst  commands.rst  conf.py  index.rst  usage.rst
docs/source/api_doc/: discussion.rst
examples/: example.py
pygpt/: __init__.py  __main__.py  discussion.py  gpt_api.py  message.py  user_interface.py
pygpt/GPT/: L9N4VZ6PBZ.json
source/: api.rst  conf.py  index.rst  usage.rst
source/doc/: message.rst
